# ExplorationBoard

./: CMakeLists.txt  LICENSE  exploration_board.cpp  exploration_board.ino  readme.md
src/: configuration.h  data_type.h
src/inputs/: coded_rotary_switch.cpp  coded_rotary_switch.h  connect_wire.cpp  connect_wire.h  input_interface.h  on_off_switch.cpp  on_off_switch.h  push_button.cpp  push_button.h  toggle_switch.cpp  toggle_switch.h  usb_connection.cpp  usb_connection.h
src/outputs/: buzzer.cpp  buzzer.h  hdd_spinner.cpp  hdd_spinner.h  motor.cpp  motor.h  output_interface.h  servo_leaver.cpp  servo_leaver.h  seven_segment_display.cpp  seven_segment_display.h  status_led.cpp  status_led.h
